--- a/src/components/AllProduct/allproducts.css
+++ b/src/components/AllProduct/allproducts.css
@@ -147,8 +147,7 @@
 .product-image-wrapper {
     position: relative;
     width: 100%;
-    /* height: 280px; Removed fixed height */
-    aspect-ratio: 4 / 3;
+    aspect-ratio: 1 / 1;
     overflow: hidden;
     background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
 }
@@ -563,7 +562,8 @@
     }
 
     .product-image-wrapper {
-        height: 240px;
+        /* Maintain aspect ratio */
+        height: auto;
     }
 
     .product-info {
@@ -643,6 +643,7 @@
 
     .product-image-wrapper {
         height: auto;
+        aspect-ratio: 1 / 1;
     }
 
     .product-info {
